# secureclaw

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
secureclaw/: __init__.py  __main__.py  cli.py
secureclaw/core/: __init__.py  allowlist.py  confidence.py  models.py  patterns.py  remediate.py  scanner.py
secureclaw/posture/: __init__.py  analyzer.py
secureclaw/reporters/: html_report.py  json_report.py  terminal.py
secureclaw/rules/: default_rules.json
tests/: test_allowlist.py  test_cli.py  test_confidence.py  test_models.py  test_patterns.py  test_posture.py  test_remediate.py  test_reporters.py  test_scanner.py  test_windows.py
tests/fixtures/: clean_file.txt  injection_basic.txt  injection_encoded.html  injection_exfiltration.txt  model_tokens.txt
tools/: build_standalone.py
